# DER-Module-1-Project

./: .gitignore  LICENSE  README.md  envcheck.py  environment.yml  fetch_once.py  main.py  pyproject.toml  scripts.py
Assignment 1/: dataset.py
DER-Project-1/: Makefile  README.md
DER-Project-1/Assignment 1/: __init__.py  features.py
DER-Project-1/Assignment 1/modeling/: predict.py  train.py
DER-Project-1/docs/docs/: index.md
data/processed/: data_clean.json
data/raw/: brainrot464.json  brainrot467.json  brainrot531.json  doomscrolling522.json
docs/: mkdocs.yml
notebooks/: DataCleaning_EDA_youtubedataset.ipynb  FetchingData_YoutubeAPI.ipynb
project_module1/: eda.py  fetch_data.py  plots.py  preprocess.py  save_data.py
reports/: describe.txt
src/: data_cleaning_youtube_dataset.py  fetching_data.py
